[gd_scene load_steps=6 format=2]

[ext_resource path="res://tuto/assets/circulo.png" type="Texture" id=1]
[ext_resource path="res://tuto/assets/firstahorcado.png" type="Texture" id=2]
[ext_resource path="res://tuto/t_ahorcado/ptahorcado.gd" type="Script" id=3]
[ext_resource path="res://tuto/assets/entendido_pressed.png" type="Texture" id=4]
[ext_resource path="res://tuto/assets/entendido.png" type="Texture" id=5]

[node name="ptahorcado" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ahorcadopt" type="Sprite" parent="." groups=["primerahorcado"]]
scale = Vector2( 1.00223, 1 )
texture = ExtResource( 2 )
centered = false
hframes = 7

[node name="ColorRect" type="ColorRect" parent="ahorcadopt"]
visible = false
margin_left = 93.0
margin_top = 413.0
margin_right = 362.0
margin_bottom = 465.0
color = Color( 1, 0.917647, 0.662745, 1 )

[node name="acceptbtn" type="TextureButton" parent="ahorcadopt"]
visible = false
margin_left = 96.7844
margin_top = 419.0
margin_right = 355.784
margin_bottom = 463.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="izquierda" type="TextureButton" parent="ahorcadopt"]
margin_top = 56.0
margin_right = 117.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 41, 137 )

[node name="derecha" type="TextureButton" parent="ahorcadopt"]
margin_left = 327.0
margin_top = 54.0
margin_right = 447.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( 41, 137 )

[node name="ColorRect2" type="ColorRect" parent="ahorcadopt"]
margin_left = 18.0
margin_top = 656.0
margin_right = 423.0
margin_bottom = 691.0
color = Color( 0.815686, 1, 0.545098, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="ahorcadopt"]
margin_left = 24.0
margin_top = 661.0
margin_right = 418.0
margin_bottom = 685.0

[node name="btn1" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
size_flags_horizontal = 2
texture_normal = ExtResource( 1 )

[node name="btn2" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_left = 61.0
margin_right = 85.0
margin_bottom = 24.0
size_flags_horizontal = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="btn3" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_left = 123.0
margin_right = 147.0
margin_bottom = 24.0
size_flags_horizontal = 2
texture_normal = ExtResource( 1 )

[node name="btn4" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_left = 185.0
margin_right = 209.0
margin_bottom = 24.0
size_flags_horizontal = 2
texture_normal = ExtResource( 1 )

[node name="btn5" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_left = 246.0
margin_right = 270.0
margin_bottom = 24.0
size_flags_horizontal = 2
texture_normal = ExtResource( 1 )

[node name="btn6" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_left = 308.0
margin_right = 332.0
margin_bottom = 24.0
size_flags_horizontal = 2
texture_normal = ExtResource( 1 )

[node name="btn7" type="TextureButton" parent="ahorcadopt/HBoxContainer"]
margin_left = 370.0
margin_right = 394.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )

[connection signal="pressed" from="ahorcadopt/acceptbtn" to="." method="_on_acceptbtn_pressed"]
[connection signal="pressed" from="ahorcadopt/izquierda" to="." method="_on_izquierda_pressed"]
[connection signal="pressed" from="ahorcadopt/derecha" to="." method="_on_derecha_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn1" to="." method="_on_btn1_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn2" to="." method="_on_btn2_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn3" to="." method="_on_btn3_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn4" to="." method="_on_btn4_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn5" to="." method="_on_btn5_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn6" to="." method="_on_btn6_pressed"]
[connection signal="pressed" from="ahorcadopt/HBoxContainer/btn7" to="." method="_on_btn7_pressed"]
